# farshow

./: .ci.yml  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  farshowConfig.cmake.in  requirements.txt  setup.py
.github/workflows/: farshow-build.yml
include/farshow/: client.hpp  framereceiver.hpp  framesender.hpp  streamexception.hpp  udpinterface.hpp
include/framestreamer/: client.hpp  framereceiver.hpp  framesender.hpp  framestreamer.hpp  streamexception.hpp  udpinterface.hpp  utils.hpp
py-bindings/: example.py  framereceiver.cpp  framesender.cpp  main.cpp  streamexception.cpp  udpinterface.cpp
src/: app-example.cpp  client.cpp  farshow-client.cpp  framereceiver.cpp  framesender.cpp  framestreamer.cpp  server.cpp  udpinterface.cpp  utils.cpp
src/python-bindings/: example.py  framereceiver.cpp  framesender.cpp  main.cpp  streamexception.cpp  udpinterface.cpp
tests/example-build/: CMakeLists.txt
